// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header has not changed snapshot after login 1`] = `
<div class="tablet-blobs">
  <div class="tablet-blob-1-4">
    <!---->
  </div>
  <div class="tablet-blob-1-2">
    <div class="blobs">
      <div class="blob">
        <!---->
      </div>
      <div class="blob-auto">
        <!---->
      </div>
    </div>
  </div>
  <div class="blob flex-right">
    <!---->
  </div>
</div>
`;

exports[`header has not changed snapshot before login 1`] = `
<div class="tablet-blobs">
  <div class="tablet-blob-1-4">
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;
